--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <canvas id="c"></canvas>
 
-  <script src="src/index.js"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
