--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <canvas id="c"></canvas>
 
   <script type="module" src="src/index.js"></script>
+
+  <div class="credit-overlay">
+    image-framer by <a href="https://twitter.com/FeelsNoRules" target=”_blank” rel=noreferrer>@NoRulesJustFeels</a>
+    - <a href="https://github.com/NoRulesJustFeels/image-framer" target=”_blank” rel=noreferrer>GitHub</a> - &#129293;
+  </div>
 </body>
 
 </html>
